# past-papers-analyzer

./: .gitignore  0478_m25_qp_12.json  CLAUDE.md  LICENSE  README.md  backfill_enrichment.py  extract.py  generate_stats.py  generate_topics.py  main.py  pyproject.toml  render.py  requirements.txt
docs/: assesssment.md  command_words.md  improvements.md  output_example.json  paper_statistics.md  question_extractor.md  questions_types.md  syllabus.md
output/html/: 0478_m24_qp_12.html  0478_m25_qp_12.html  0478_m25_qp_22.html  0478_s24_qp_11.html  0478_s24_qp_12.html  0478_s24_qp_13.html  0478_s25_qp_11.html  0478_s25_qp_12.html  0478_s25_qp_13.html  0478_w24_qp_11.html  0478_w24_qp_12.html  0478_w24_qp_13.html  0478_w25_qp_11.html  0478_w25_qp_12.html  0478_w25_qp_13.html  output_example.html  paper.css  paper.js  statistics.html  topic_1.html  topic_2.html  topic_3.html  topic_4.html  topic_5.html  topic_6.html  topics.css  topics.html  topics.js
output/json/: 0478_m24_qp_12.json  0478_m25_qp_12.json  0478_m25_qp_22.json  0478_s24_qp_11.json  0478_s24_qp_12.json  0478_s24_qp_13.json  0478_s25_qp_11.json  0478_s25_qp_12.json  0478_s25_qp_13.json  0478_w24_qp_11.json  0478_w24_qp_12.json  0478_w24_qp_13.json  0478_w25_qp_11.json  0478_w25_qp_12.json  0478_w25_qp_13.json  _smoketest.json  output_example.json
scripts/: diagnose_table.py
src/: claude_client.py  enricher.py  extractor.py  pdf_reader.py  prompts.py  renderer.py  schema.py  statistics.py
