[project]
name = "past-papers-analyzer"
version = "0.1.0"
description = "CLI tool that extracts structured question data from Cambridge exam PDFs using Claude."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
]
